# maple

./: .env.example  .gitignore  README.md  RECOMMENDATION_SYSTEM_PLAN.md  pyproject.toml  requirements.txt
autoresearch/: __init__.py  agent.py  harness.py  program.md  train.py
docs/: ROADMAP_ISSUES.md  ml-model-plan.md  model-usage-guide.md
examples/: mlflow_tracking_example.py  quickstart.py
notebooks/: explore.ipynb
scripts/: generate_sample_data.py
src/: __init__.py
src/api/: __init__.py  main.py
src/autoresearch/: __init__.py  bridge.py  experiment_store.py  metric_adapter.py
src/data/: __init__.py  loader.py  schemas.py  validation.py
src/evaluation/: __init__.py  metrics.py
src/models/: __init__.py  base.py  collaborative.py  content_based.py  ensemble.py  hybrid.py  neural.py  popularity.py
src/monitoring/: __init__.py  monitor.py
src/tracking/: __init__.py  mlflow_tracker.py
src/tuning/: __init__.py  optuna_tuner.py
tests/: __init__.py  test_autoresearch_harness.py  test_data_loader.py  test_metrics.py  test_models.py  test_monitoring.py  test_phase2_models.py  test_tracking.py  test_tuning.py  test_validation.py
